--- a/DiaryLog/DiaryLog.Android/Properties/AndroidManifest.xml
+++ b/DiaryLog/DiaryLog.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.diarylog">
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-    <application android:label="DiaryLog.Android" android:theme="@style/MainTheme"></application>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+﻿<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.diarylog" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="30" />
+	<application android:label="DiaryLog.Android" android:theme="@style/MainTheme" android:icon="@drawable/xamarin_logo"></application>
 </manifest>
